⬇️ downgraded projects java version to 1.8